public/stylesheets/style.css
/* ... */
.directions-nav-bar {
  padding-left:0;
  padding-right:0;
}
.directions-nav-bar > form:first-child > .row,
.directions-nav-bar > form > .row:last-child,  {
  background: #fff;
}

.close-button {

  top: 5px;
  right: 5px;
  position: absolute;
  font-size:40px;
  z-index: 5;
}

#infoPopup {
  background: #B5B5B5;
  color: white;
}

#directions-button {
  text-align: center;
  margin-bottom:2%;
}



.rightAlign {
  float:right;
  margin-top: 15px
}
.iconTools {
  position:absolute;
  right:0;
  width: 50px;
  float:right;
  color: #000;
}

.esriGeocoder {
  border-radius: 0px !important;
  height: 100% !important;
    border-top:1px solid #8cd4cc;
  border-bottom:3px solid #8cd4cc;
}


#startAddAbove {
  height: 50%;
}


.esriGeocoderContainer {
  width: 100% !important;
  height: 100% !important;
  margin: 0px 0px 0px 0px  !important;
}
#startAddress {
  width: 100%;
}
.esriGeocoderIcon {
  display: none !important;
}

.address-wrapper {
  background-color:#8cd4cc;
  position:relative;
}

.address-container {
  color: #fff;
}
.mint-background {
  background-color: #26A69A;
}
#startAddress_input {
 width: 100% !important;
  height: 25px !important;
  text-indent: 30px;
  padding: 0px !important;
  margin: 0px  !important;
  border: none;
  font-size: .85rem !important;
  background-color: #f2f2f2;
  color: #575757;
}

.address_wrapper {
  position:relative;
}

#destinationAddress_input {
  width: 100% !important;
  height: 25px !important;
  text-indent: 30px;
  padding: 0 !important;
  margin: 0 !important;
  border: none;
  font-size: .85rem !important;
  background-color: #f2f2f2;
  color: #575757;
}

#destinationAddressInitial_input {
  width: 100% !important;
  padding: 0 !important;
  margin: 0 !important;
  border: none;
  font-size: 1rem !important;
  background-color: #f2f2f2;
  color: #575757;
  text-align:center;
}

#myLocation {
  position:absolute;
  color: #5d5d5d;
  z-index:-1;
  left:0;
  margin-top:30px;
}

#myLocation:hover, #myLocation:active {
}

.row90pct {
  position:relative;
  width:90%;
  margin-right:5%;
  margin-left:5%;
}

.row70pct {
  position:relative;
  width:70%;
  margin-right:15%;
  margin-left:15%;
}



.lowerOptions {
  position:absolute;
  bottom:27.5%;
  height:0;
  z-index: 1;
}
.vertical-align-center {
  margin-top:15%;
}
.bottom-buttons {
/*  margin-top:15%;*/
  position:relative;
  width:100%;

}

.bottom-circle {

  font-size:30px !important;
  border-radius:50%;
  height:50px;
  width:50px;
  border: 1px solid #57585A;
  background-color: #f2f2f2;
}

.quarter-width {
  width:25%;
  float:left;
  text-align:center;
}
.horizontal-center {
  width:100%;
  height:100%;
  text-align:center;
}

.right-circle {
  z-index: 9;
  font-size:30px !important;
  border-radius:50%;
  height:50px;
  width:50px;
  border: 1px solid #57585A;
  background-color: #f2f2f2;
  margin-top:10px;
}

